--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -113,7 +113,7 @@ http {
         server_name akane.production www.akane.production;
         
         # SSL certificates - update paths as needed
-        ssl_certificate     /etc/nginx/ssl/akane.production.crt;
+        issl_certificate     /etc/nginx/ssl/akane.production.crt;
         ssl_certificate_key /etc/nginx/ssl/akane.production.key;
         
         # Security headers
@@ -205,44 +205,44 @@ http {
         }
 
         # WordPress optimized
-        location /wp/ {
-            proxy_pass http://wordpress:80/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+        # location /wp/ {
+        #     proxy_pass http://wordpress:80/;
+        #     proxy_set_header Host $host;
+        #     proxy_set_header X-Real-IP $remote_addr;
+        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #     proxy_set_header X-Forwarded-Proto $scheme;
             
-            # Security for WordPress
-            location ~* /wp-admin/|/wp-login.php {
-                # Uncomment to restrict by IP
-                # allow 10.0.0.0/8;
-                # allow 127.0.0.1;
-                # deny all;
+        #     # Security for WordPress
+        #     location ~* /wp-admin/|/wp-login.php {
+        #         # Uncomment to restrict by IP
+        #         # allow 10.0.0.0/8;
+        #         # allow 127.0.0.1;
+        #         # deny all;
                 
-                proxy_pass http://wordpress:80;
-                proxy_set_header Host $host;
-                proxy_set_header X-Real-IP $remote_addr;
-            }
+        #         proxy_pass http://wordpress:80;
+        #         proxy_set_header Host $host;
+        #         proxy_set_header X-Real-IP $remote_addr;
+        #     }
             
-            # Optimize WordPress static content
-            location ~* ^/wp.+\.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
-                expires 7d;
-                add_header Cache-Control "public, max-age=604800, immutable";
-                access_log off;
-                log_not_found off;
-                proxy_pass http://wordpress:80;
-            }
+        #     # Optimize WordPress static content
+        #     location ~* ^/wp.+\.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
+        #         expires 7d;
+        #         add_header Cache-Control "public, max-age=604800, immutable";
+        #         access_log off;
+        #         log_not_found off;
+        #         proxy_pass http://wordpress:80;
+        #     }
             
-            # Deny access to sensitive WordPress files
-            location ~* \.(htaccess|htpasswd|ini|log|sh|inc|bak|git|svn)$ {
-                deny all;
-            }
+        #     # Deny access to sensitive WordPress files
+        #     location ~* \.(htaccess|htpasswd|ini|log|sh|inc|bak|git|svn)$ {
+        #         deny all;
+        #     }
             
-            # Protect WordPress xmlrpc.php
-            location ~* /xmlrpc.php$ {
-                deny all;
-            }
-        }
+        #     # Protect WordPress xmlrpc.php
+        #     location ~* /xmlrpc.php$ {
+        #         deny all;
+        #     }
+        # }
 
         # Deny access to hidden files
         location ~ /\. {
