--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,6 +4,7 @@ worker_processes  auto;
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
 
+# Optimize worker connections
 events {
     worker_connections  1024;
     multi_accept on;
@@ -22,7 +23,7 @@ http {
 
     access_log  /var/log/nginx/access.log  main buffer=16k flush=10s;
 
-    # Performance optimizations
+    # File optimizations
     sendfile        on;
     tcp_nopush      on;
     tcp_nodelay     on;
@@ -73,13 +74,6 @@ http {
         text/vtt
         text/x-component
         text/x-cross-domain-policy;
-
-    # SSL optimization
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 10m;
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers on;
-    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
     
     # File cache settings
     open_file_cache max=1000 inactive=20s;
@@ -94,81 +88,48 @@ http {
         return 444;
     }
 
-    # Dedicated n8n server configuration
-    server {
-        listen 80;
-        server_name n8n.akane.productions;
-        
-        # Add robots.txt to prevent indexing of n8n
-        location = /robots.txt {
-            add_header Content-Type text/plain;
-            return 200 "User-agent: *\nDisallow: /\n";
-        }
-        
-        # Security headers
-        add_header X-Frame-Options "SAMEORIGIN" always;
-        add_header X-XSS-Protection "1; mode=block" always;
-        add_header X-Content-Type-Options "nosniff" always;
-        add_header Referrer-Policy "no-referrer-when-downgrade" always;
-        add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'; frame-ancestors 'self';" always;
-        
-        # n8n application
-        location / {
-            proxy_pass http://n8n:5678;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-            
-            # Increase timeout for long-running workflows
-            proxy_read_timeout 120s;
-            proxy_connect_timeout 120s;
-            proxy_send_timeout 120s;
-            
-            # Disable caching
-            add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate";
-            expires off;
-        }
-        
-        # Deny access to hidden files
-        location ~ /\. {
-            deny all;
-            access_log off;
-            log_not_found off;
-        }
-        
-        # Custom error pages
-        error_page 404 /404.html;
-        error_page 500 502 503 504 /50x.html;
-        
-        # Health check
-        location /health {
-            access_log off;
-            return 200 "healthy\n";
-        }
-    }
-
     # Main server configuration
     server {
         listen 80;
         server_name akane.production www.akane.production;
         
-        # Landing page root
-        root /var/www/html;
-        index index.html;
+        # Real IP settings for load balancer
+        set_real_ip_from 10.0.0.0/8;  # Replace with your load balancer's IP range
+        set_real_ip_from 172.16.0.0/12;  # Replace with your load balancer's IP range
+        set_real_ip_from 192.168.0.0/16;  # Replace with your load balancer's IP range
+        real_ip_header X-Forwarded-For;
+        real_ip_recursive on;
         
-        # Security headers
+        # Trust the X-Forwarded-Proto header from load balancer
+        map $http_x_forwarded_proto $proxy_x_forwarded_proto {
+            default $http_x_forwarded_proto;
+            ''      $scheme;
+        }
+        
+        # Security headers - assuming SSL is terminated at load balancer
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-XSS-Protection "1; mode=block" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "no-referrer-when-downgrade" always;
         add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'; frame-ancestors 'self';" always;
+        # Note: HSTS should be set at load balancer level
+        add_header Permissions-Policy "camera=(), microphone=(), geolocation=(), interest-cohort=()" always;
         
         # Optimize website SEO
         add_header X-Robots-Tag "index, follow" always;
+        
+        # Root redirect
+        location = / {
+            proxy_pass http://landing:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
+            
+            # Add caching headers for better performance
+            add_header Cache-Control "public, max-age=3600";
+            expires 1h;
+        }
         
         # Landing page
         location / {
@@ -176,7 +137,7 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
             
             # Performance optimizations
             proxy_buffering on;
@@ -192,12 +153,83 @@ http {
                 log_not_found off;
                 try_files $uri @landing;
             }
+            
+            # Preload key resources
+            add_header Link "</styles.css>; rel=preload; as=style, </main.js>; rel=preload; as=script";
         }
         
         location @landing {
             proxy_pass http://landing:3000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
+        }
+
+        # n8n with security
+        location /n8n/ {
+            # Restrict access to internal networks or specific IPs
+            # allow 10.0.0.0/8;
+            # allow 127.0.0.1;
+            # deny all;
+            
+            proxy_pass http://n8n:5678/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            
+            # Increase timeout for long-running workflows
+            proxy_read_timeout 120s;
+            proxy_connect_timeout 120s;
+            proxy_send_timeout 120s;
+            
+            # Disable caching
+            add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate";
+            expires off;
+        }
+
+        # WordPress optimized
+        location /wp/ {
+            proxy_pass http://wordpress:80/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
+            
+            # Security for WordPress
+            location ~* /wp-admin/|/wp-login.php {
+                # Uncomment to restrict by IP
+                # allow 10.0.0.0/8;
+                # allow 127.0.0.1;
+                # deny all;
+                
+                proxy_pass http://wordpress:80;
+                proxy_set_header Host $host;
+                proxy_set_header X-Real-IP $remote_addr;
+                proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
+            }
+            
+            # Optimize WordPress static content
+            location ~* ^/wp.+\.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
+                expires 7d;
+                add_header Cache-Control "public, max-age=604800, immutable";
+                access_log off;
+                log_not_found off;
+                proxy_pass http://wordpress:80;
+            }
+            
+            # Deny access to sensitive WordPress files
+            location ~* \.(htaccess|htpasswd|ini|log|sh|inc|bak|git|svn)$ {
+                deny all;
+            }
+            
+            # Protect WordPress xmlrpc.php
+            location ~* /xmlrpc.php$ {
+                deny all;
+            }
         }
 
         # Deny access to hidden files
@@ -226,7 +258,7 @@ http {
         # robots.txt
         location = /robots.txt {
             add_header Content-Type text/plain;
-            return 200 "User-agent: *\nAllow: /\nSitemap: https://akane.production/sitemap.xml\n";
+            return 200 "User-agent: *\nDisallow: /n8n/\nDisallow: /wp/wp-admin/\nDisallow: /wp/wp-includes/\nAllow: /\nSitemap: https://akane.production/sitemap.xml\n";
         }
     }
 }
