--- a/landing/package.json
+++ b/landing/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "axios": "^1.8.4",
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "lucide-react": "^0.344.0",
+    "open": "^10.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0"
