--- a/landing/tsconfig.json
+++ b/landing/tsconfig.json
@@ -7,7 +7,8 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true
   },
-  "include": ["src", "services/twitch-api.js", "services/example-usage.js", "public/twitch-auth-client.js"]
+  "include": ["src"]
 }
