--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -94,11 +94,11 @@ http {
         server_name akane.production www.akane.production;
         
         # Real IP settings for load balancer
-        ; set_real_ip_from 10.0.0.0/8;  # Replace with your load balancer's IP range
-        ; set_real_ip_from 172.16.0.0/12;  # Replace with your load balancer's IP range
-        ; set_real_ip_from 192.168.0.0/16;  # Replace with your load balancer's IP range
-        ; real_ip_header X-Forwarded-For;
-        ; real_ip_recursive on;
+        # set_real_ip_from 10.0.0.0/8;  # Replace with your load balancer's IP range
+        # set_real_ip_from 172.16.0.0/12;  # Replace with your load balancer's IP range
+        # set_real_ip_from 192.168.0.0/16;  # Replace with your load balancer's IP range
+        # real_ip_header X-Forwarded-For;
+        # real_ip_recursive on;
         
         # Trust the X-Forwarded-Proto header from load balancer
         map $http_x_forwarded_proto $proxy_x_forwarded_proto {
@@ -192,34 +192,34 @@ http {
         }
 
         # WordPress optimized
-        ; location /wp/ {
-        ;     proxy_pass http://wordpress:80/;
-        ;     proxy_set_header Host $host;
-        ;     proxy_set_header X-Real-IP $remote_addr;
-        ;     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        ;     proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
+        # location /wp/ {
+        #     proxy_pass http://wordpress:80/;
+        #     proxy_set_header Host $host;
+        #     proxy_set_header X-Real-IP $remote_addr;
+        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #     proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
             
-        ;     # Security for WordPress
-        ;     location ~* /wp-admin/|/wp-login.php {
-        ;         # Uncomment to restrict by IP
-        ;         # allow 10.0.0.0/8;
-        ;         # allow 127.0.0.1;
-        ;         # deny all;
+        #     # Security for WordPress
+        #     location ~* /wp-admin/|/wp-login.php {
+        #         # Uncomment to restrict by IP
+        #         # allow 10.0.0.0/8;
+        #         # allow 127.0.0.1;
+        #         # deny all;
                 
-        ;         proxy_pass http://wordpress:80;
-        ;         proxy_set_header Host $host;
-        ;         proxy_set_header X-Real-IP $remote_addr;
-        ;         proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
-        ;     }
+        #         proxy_pass http://wordpress:80;
+        #         proxy_set_header Host $host;
+        #         proxy_set_header X-Real-IP $remote_addr;
+        #         proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
+        #     }
             
-        ;     # Optimize WordPress static content
-        ;     location ~* ^/wp.+\.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
-        ;         expires 7d;
-        ;         add_header Cache-Control "public, max-age=604800, immutable";
-        ;         access_log off;
-        ;         log_not_found off;
-        ;         proxy_pass http://wordpress:80;
-        ;     }
+        #     # Optimize WordPress static content
+        #     location ~* ^/wp.+\.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
+        #         expires 7d;
+        #         add_header Cache-Control "public, max-age=604800, immutable";
+        #         access_log off;
+        #         log_not_found off;
+        #         proxy_pass http://wordpress:80;
+        #     }
             
             # Deny access to sensitive WordPress files
             location ~* \.(htaccess|htpasswd|ini|log|sh|inc|bak|git|svn)$ {
