--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -81,11 +81,42 @@ http {
     open_file_cache_min_uses 2;
     open_file_cache_errors on;
 
+    # Custom error pages
+    error_page 400 /error/400.html;
+    error_page 401 /error/401.html;
+    error_page 403 /error/403.html;
+    error_page 404 /error/404.html;
+    error_page 405 /error/405.html;
+    error_page 406 /error/406.html;
+    error_page 408 /error/408.html;
+    error_page 413 /error/413.html;
+    error_page 414 /error/414.html;
+    error_page 415 /error/415.html;
+    error_page 429 /error/429.html;
+    error_page 500 502 503 504 /error/50x.html;
+
     # Default server block to handle invalid domains
     server {
         listen 80 default_server;
         server_name _;
-        return 444;
+        
+        # Location for custom error pages
+        location ^~ /error/ {
+            internal;
+            root /usr/share/nginx/html;
+            try_files $uri =404;
+        }
+        
+        # Default custom error page for all errors when no specific error page exists
+        location = /error/default.html {
+            internal;
+            root /usr/share/nginx/html;
+        }
+        
+        # Return a specific status code instead of serving default server content
+        location / {
+            return 444; # Closes the connection without sending a response
+        }
     }
 
     # Main server configuration
@@ -118,6 +149,13 @@ http {
         # Optimize website SEO
         add_header X-Robots-Tag "index, follow" always;
         
+        # Custom error pages location
+        location ^~ /error/ {
+            internal;
+            alias /usr/share/nginx/html/error/;
+            try_files $uri =404;
+        }
+        
         # Root redirect
         location = / {
             proxy_pass http://landing:3000;
@@ -129,6 +167,9 @@ http {
             # Add caching headers for better performance
             add_header Cache-Control "public, max-age=3600";
             expires 1h;
+            
+            # Custom error handling
+            proxy_intercept_errors on;
         }
         
         # Landing page
@@ -145,6 +186,9 @@ http {
             proxy_busy_buffers_size 24k;
             proxy_buffers 64 4k;
             
+            # Enable error interception to use custom error pages
+            proxy_intercept_errors on;
+            
             # Cache static content
             location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
                 expires 7d;
@@ -152,6 +196,9 @@ http {
                 access_log off;
                 log_not_found off;
                 try_files $uri @landing;
+                
+                # Error handling for static files
+                error_page 404 = @landing;
             }
             
             # Preload key resources
@@ -163,6 +210,9 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
+            
+            # Enable error interception
+            proxy_intercept_errors on;
         }
 
         # n8n with security
@@ -189,6 +239,15 @@ http {
             # Disable caching
             add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate";
             expires off;
+            
+            # Custom error handling
+            proxy_intercept_errors on;
+            
+            # Handle 502 Bad Gateway errors specifically for n8n
+            error_page 502 /error/n8n-unavailable.html;
+            
+            # Handle rate limiting
+            limit_req zone=n8n_limit burst=20 nodelay;
         }
 
         # WordPress optimized
@@ -198,20 +257,26 @@ http {
         #     proxy_set_header X-Real-IP $remote_addr;
         #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         #     proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
-            
+        #     
+        #     # Custom error handling
+        #     proxy_intercept_errors on;
+        #     
         #     # Security for WordPress
         #     location ~* /wp-admin/|/wp-login.php {
         #         # Uncomment to restrict by IP
         #         # allow 10.0.0.0/8;
         #         # allow 127.0.0.1;
         #         # deny all;
-                
+        #         
         #         proxy_pass http://wordpress:80;
         #         proxy_set_header Host $host;
         #         proxy_set_header X-Real-IP $remote_addr;
         #         proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
+        #         
+        #         # Rate limiting for login attempts
+        #         limit_req zone=wp_login burst=5 nodelay;
         #     }
-            
+        #     
         #     # Optimize WordPress static content
         #     location ~* ^/wp.+\.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
         #         expires 7d;
@@ -219,29 +284,49 @@ http {
         #         access_log off;
         #         log_not_found off;
         #         proxy_pass http://wordpress:80;
+        #         
+        #         # For static asset errors, return default content from WordPress
+        #         error_page 404 = @wordpress_fallback;
         #     }
             
-            # Deny access to sensitive WordPress files
-            location ~* \.(htaccess|htpasswd|ini|log|sh|inc|bak|git|svn)$ {
-                deny all;
-            }
-            
-            # Protect WordPress xmlrpc.php
-            location ~* /xmlrpc.php$ {
-                deny all;
-            }
+        # Deny access to sensitive WordPress files
+        location ~* \.(htaccess|htpasswd|ini|log|sh|inc|bak|git|svn)$ {
+            deny all;
+            error_page 403 /error/403.html;
         }
+        
+        # Protect WordPress xmlrpc.php
+        location ~* /xmlrpc.php$ {
+            deny all;
+            error_page 403 /error/403.html;
+        }
+        
+        # Handle WordPress fallback
+        # location @wordpress_fallback {
+        #     proxy_pass http://wordpress:80/;
+        #     proxy_set_header Host $host;
+        #     proxy_set_header X-Real-IP $remote_addr;
+        #     proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
+        # }
 
         # Deny access to hidden files
         location ~ /\. {
             deny all;
             access_log off;
             log_not_found off;
+            error_page 403 /error/403.html;
         }
 
-        # Custom error pages
-        error_page 404 /404.html;
-        error_page 500 502 503 504 /50x.html;
+        # Rate limiting zones
+        limit_req_zone $binary_remote_addr zone=global_limit:10m rate=30r/s;
+        limit_req_zone $binary_remote_addr zone=n8n_limit:10m rate=10r/s;
+        limit_req_zone $binary_remote_addr zone=wp_login:10m rate=5r/m;
+        
+        # Apply global rate limiting to prevent DDoS
+        limit_req zone=global_limit burst=50 nodelay;
+        
+        # Enable request limiting status codes
+        limit_req_status 429;
         
         # Health check
         location /health {
@@ -253,12 +338,36 @@ http {
         location = /favicon.ico {
             access_log off;
             log_not_found off;
+            try_files $uri =404;
         }
         
         # robots.txt
         location = /robots.txt {
             add_header Content-Type text/plain;
             return 200 "User-agent: *\nDisallow: /n8n/\nDisallow: /wp/wp-admin/\nDisallow: /wp/wp-includes/\nAllow: /\nSitemap: https://akane.production/sitemap.xml\n";
+        }
+        
+        # Handle 404 Not Found errors for the entire server
+        location @not_found {
+            return 404;
+        }
+        
+        # Custom 50x error page for API requests
+        location = /api/error {
+            default_type application/json;
+            return 500 '{"error": "Internal Server Error", "message": "An unexpected error occurred while processing your request"}';
+        }
+        
+        # Handle API errors differently (return JSON instead of HTML)
+        location /api/ {
+            proxy_pass http://landing:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
+            
+            # Custom error handling for API
+            proxy_intercept_errors on;
+            error_page 400 401 403 404 429 500 502 503 504 = /api/error;
         }
     }
 }
