--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -95,6 +95,17 @@ http {
     error_page 429 /error/429.html;
     error_page 500 502 503 504 /error/50x.html;
 
+    # Map directive for X-Forwarded-Proto - moved from server block to http context
+    map $http_x_forwarded_proto $proxy_x_forwarded_proto {
+        default $http_x_forwarded_proto;
+        ''      $scheme;
+    }
+
+    # Rate limiting zones
+    limit_req_zone $binary_remote_addr zone=global_limit:10m rate=30r/s;
+    limit_req_zone $binary_remote_addr zone=n8n_limit:10m rate=10r/s;
+    limit_req_zone $binary_remote_addr zone=wp_login:10m rate=5r/m;
+
     # Default server block to handle invalid domains
     server {
         listen 80 default_server;
@@ -130,12 +141,6 @@ http {
         # set_real_ip_from 192.168.0.0/16;  # Replace with your load balancer's IP range
         # real_ip_header X-Forwarded-For;
         # real_ip_recursive on;
-        
-        # Trust the X-Forwarded-Proto header from load balancer
-        map $http_x_forwarded_proto $proxy_x_forwarded_proto {
-            default $http_x_forwarded_proto;
-            ''      $scheme;
-        }
         
         # Security headers - assuming SSL is terminated at load balancer
         add_header X-Frame-Options "SAMEORIGIN" always;
@@ -317,11 +322,6 @@ http {
             error_page 403 /error/403.html;
         }
 
-        # Rate limiting zones
-        limit_req_zone $binary_remote_addr zone=global_limit:10m rate=30r/s;
-        limit_req_zone $binary_remote_addr zone=n8n_limit:10m rate=10r/s;
-        limit_req_zone $binary_remote_addr zone=wp_login:10m rate=5r/m;
-        
         # Apply global rate limiting to prevent DDoS
         limit_req zone=global_limit burst=50 nodelay;
         
