--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -109,7 +109,7 @@ http {
         }
         
         # Error pages
-        error_page 404 /404.html;
-        error_page 500 502 503 504 /50x.html;
+        #error_page 404 /404.html;
+        #error_page 500 502 503 504 /50x.html;
     }
 }
