--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       #- ./nginx/ssl:/etc/nginx/ssl:ro
       - ./landing/dist:/usr/share/nginx/html:ro
-      - ./nginx/error:/usr/share/nginx/html/error:ro
+      #- ./nginx/error:/usr/share/nginx/html/error:ro
     depends_on:
       - n8n
       - landing
