--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
-      #start_period:: 20s
+      start_period: 20s
 
   # Nginx service to route traffic
   nginx:
@@ -35,12 +35,10 @@ services:
       - "80:80"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      #- ./nginx/ssl:/etc/nginx/ssl:ro
-      - ./landing/dist:/usr/share/nginx/html:ro
-      #- ./nginx/error:/usr/share/nginx/html/error:ro
+      - dist_data:/usr/share/nginx/html:ro
     depends_on:
-      - n8n
-      - landing
+      landing:
+        condition: service_healthy
     networks:
       - app-network
     healthcheck:
@@ -62,7 +60,7 @@ services:
       - TWITCH_CLIENT_ID=${TWITCH_CLIENT_ID}
       - TWITCH_CLIENT_SECRET=${TWITCH_CLIENT_SECRET}
     volumes:
-      - ./landing/dist:/app/dist:ro
+      - dist_data:/app/dist:ro
     networks:
       - app-network
     healthcheck:
@@ -72,14 +70,6 @@ services:
       retries: 3
       start_period: 15s
 
-  # WordPress service - commented out for now
-  # wordpress:
-  #   extends:
-  #     file: ./wp_start/docker-compose.yml
-  #     service: wordpress
-  #   networks:
-  #     - app-network
-
 networks:
   app-network:
     driver: bridge
@@ -87,3 +77,5 @@ networks:
 volumes:
   n8n_data:
     driver: local
+  dist_data:
+    name: landing_dist_data
