--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -24,27 +24,36 @@ http {
     tcp_nodelay     on;
     keepalive_timeout  65;
     
+    # Disable open_file_cache to prevent stale content
+    open_file_cache off;
+    
     # Compression settings
     gzip  on;
     gzip_comp_level 6;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
-    # Main server configuration - this will be the default
+    # Main server configuration
     server {
         listen 80 default_server;
-        server_name _;  # This matches any hostname
+        server_name _;
         
         # Basic security headers
         add_header X-Frame-Options "SAMEORIGIN";
         add_header X-XSS-Protection "1; mode=block";
         add_header X-Content-Type-Options "nosniff";
+        
+        # Disable cache for HTML files to ensure fresh content
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Pragma "no-cache";
+        add_header Expires "0";
 
         # Root directory for static files
         root /usr/share/nginx/html;
+        index index.html;
 
         # Landing page (main application)
         location / {
-            # First try to serve static files directly from nginx
+            # First attempt to serve static files, then fall back to proxy
             try_files $uri $uri/ @landing;
         }
 
@@ -55,23 +64,9 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache off;
+            proxy_buffering off;
         }
-
-        # n8n service
-        #location /n8n/ {
-        #    proxy_pass http://n8n:5678/;
-        #    proxy_set_header Host $host;
-        #    proxy_set_header X-Real-IP $remote_addr;
-        #    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        #    proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # WebSocket support
-        #    proxy_http_version 1.1;
-        #    proxy_set_header Upgrade $http_upgrade;
-        #    proxy_set_header Connection "upgrade";
-            
-        #    proxy_read_timeout 120s;
-        #}
         
         # API endpoints
         location /api/ {
@@ -80,13 +75,13 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache off;
         }
 
-        # Optimize static content caching
+        # Static content with short cache duration
         location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
-            expires 7d;
-            add_header Cache-Control "public, max-age=604800";
-            access_log off;
+            expires 1h;  # Short expiration to allow for updates
+            add_header Cache-Control "public, max-age=3600";
             try_files $uri =404;
         }
         
@@ -99,7 +94,7 @@ http {
         # robots.txt
         location = /robots.txt {
             add_header Content-Type text/plain;
-            return 200 "User-agent: *\nDisallow: /n8n/\nAllow: /\n";
+            return 200 "User-agent: *\nAllow: /\n";
         }
         
         # Favicon handling
@@ -107,9 +102,5 @@ http {
             access_log off;
             log_not_found off;
         }
-        
-        # Error pages
-        #error_page 404 /404.html;
-        #error_page 500 502 503 504 /50x.html;
     }
 }
