--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -42,16 +42,11 @@ http {
         add_header X-XSS-Protection "1; mode=block";
         add_header X-Content-Type-Options "nosniff";
         
-        # Disable cache for HTML files to ensure fresh content
-        add_header Cache-Control "no-cache, no-store, must-revalidate";
-        add_header Pragma "no-cache";
-        add_header Expires "0";
-
         # Root directory for static files
         root /usr/share/nginx/html;
         index index.html;
 
-        # Landing page (main application)
+        # Main landing page
         location / {
             # First attempt to serve static files, then fall back to proxy
             try_files $uri $uri/ @landing;
@@ -64,8 +59,29 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Disable caching for dynamic content
             proxy_cache off;
             proxy_buffering off;
+            
+            # Increase timeouts for long-running requests
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
+        }
+        
+        # Twitch callback URL
+        location = /twitch-callback.html {
+            # Set appropriate cache-control headers
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
+            add_header Pragma "no-cache";
+            add_header Expires "0";
+        }
+        
+        # Twitch auth client JS
+        location = /twitch-auth-client.js {
+            # Set appropriate cache-control headers for infrequent updates
+            add_header Cache-Control "public, max-age=3600";
         }
         
         # API endpoints
@@ -75,13 +91,81 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Configure CORS headers for API
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+            
+            # Handle OPTIONS method for CORS preflight requests
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' '*';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+                add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+            
+            # Disable caching for API endpoints
             proxy_cache off;
+            
+            # Increase timeouts for API calls
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
+        }
+        
+        # Special handling for Twitch API endpoint
+        location /api/twitch/ {
+            proxy_pass http://landing:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Configure CORS headers for Twitch API
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+            
+            # Handle OPTIONS method for CORS preflight requests
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' '*';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+                add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+            
+            # Disable caching for API endpoints
+            proxy_cache off;
+            
+            # Increase timeouts for Twitch API calls
+            proxy_connect_timeout 120s;
+            proxy_send_timeout 120s;
+            proxy_read_timeout 120s;
         }
 
-        # Static content with short cache duration
-        location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
-            expires 1h;  # Short expiration to allow for updates
+        # Static content with appropriate cache durations
+        location ~* \.(jpg|jpeg|png|gif|ico|svg)$ {
+            expires 7d;  # Images can be cached longer
+            add_header Cache-Control "public, max-age=604800";
+            try_files $uri =404;
+        }
+        
+        location ~* \.(css|js)$ {
+            expires 1h;  # Shorter expiration for code files
             add_header Cache-Control "public, max-age=3600";
+            try_files $uri =404;
+        }
+        
+        location ~* \.(woff|woff2|ttf|eot)$ {
+            expires 30d;  # Font files can be cached longer
+            add_header Cache-Control "public, max-age=2592000";
             try_files $uri =404;
         }
         
@@ -101,6 +185,19 @@ http {
         location = /favicon.ico {
             access_log off;
             log_not_found off;
+        }
+        
+        # Error handling
+        error_page 404 /404.html;
+        location = /404.html {
+            root /usr/share/nginx/html;
+            internal;
+        }
+        
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+            root /usr/share/nginx/html;
+            internal;
         }
     }
 }
