--- a/landing/docker-compose.yml
+++ b/landing/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - NODE_ENV=development
       - TWITCH_CLIENT_ID=${TWITCH_CLIENT_ID}
       - TWITCH_CLIENT_SECRET=${TWITCH_CLIENT_SECRET}
+      - VITE_TWITCH_CLIENT_ID=${TWITCH_CLIENT_ID}
     healthcheck:
       test: ["CMD", "wget", "--spider", "http://localhost:5173"]
       interval: 20s
@@ -34,6 +35,7 @@ services:
     volumes:
       - .:/app
       - /app/node_modules
+      - ./api:/app/api
     ports:
       - "3000:3000"
     command: node server/index.js
@@ -42,6 +44,7 @@ services:
       - TWITCH_CLIENT_ID=${TWITCH_CLIENT_ID}
       - TWITCH_CLIENT_SECRET=${TWITCH_CLIENT_SECRET}
       - PORT=3000
+      - DEBUG=true
     healthcheck:
       test: ["CMD", "wget", "--spider", "http://localhost:3000/api/health"]
       interval: 20s
@@ -85,3 +88,5 @@ services:
   
 volumes:
   dist_data:
+    external: true
+    name: landing_dist_data
