--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,10 +35,13 @@ services:
       - "80:80"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/cache:/var/cache/nginx
       - dist_data:/usr/share/nginx/html:ro
     depends_on:
       landing:
         condition: service_healthy
+      api:
+        condition: service_started
     networks:
       - app-network
     healthcheck:
@@ -69,6 +72,27 @@ services:
       timeout: 10s
       retries: 3
       start_period: 15s
+
+  # API server for Twitch integration
+  api:
+    build:
+      context: ./landing
+      dockerfile: Dockerfile
+    restart: unless-stopped
+    command: node server/index.js
+    environment:
+      - NODE_ENV=development
+      - PORT=3000
+      - TWITCH_CLIENT_ID=${TWITCH_CLIENT_ID}
+      - TWITCH_CLIENT_SECRET=${TWITCH_CLIENT_SECRET}
+    networks:
+      - app-network
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "http://localhost:3000/api/health"]
+      interval: 20s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
 
 networks:
   app-network:
