--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,11 +1,12 @@
 user  nginx;
 worker_processes  auto;
 
-error_log  /var/log/nginx/error.log notice;
+error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
 
 events {
     worker_connections  1024;
+    multi_accept on;
 }
 
 http {
@@ -21,38 +22,15 @@ http {
     sendfile        on;
     tcp_nopush      on;
     tcp_nodelay     on;
-    
     keepalive_timeout  65;
-    types_hash_max_size 2048;
-    server_tokens off;
-
-    # Gzip Settings
+    
+    # Disable open_file_cache to prevent stale content
+    open_file_cache off;
+    
+    # Compression settings
     gzip  on;
-    gzip_comp_level 5;
-    gzip_min_length 256;
-    gzip_proxied any;
-    gzip_vary on;
-    gzip_types
-        application/javascript
-        application/json
-        application/xml
-        application/xml+rss
-        text/css
-        text/javascript
-        text/plain
-        text/xml;
-
-    # Cache Configuration
-    proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=app_cache:10m max_size=100m inactive=60m;
-    proxy_temp_path /var/cache/nginx/temp;
-
-    # Map to determine environment based on hostname
-    map $host $environment {
-        default "production";
-        localhost "development";
-        127.0.0.1 "development";
-        "~*\.local$" "development";
-    }
+    gzip_comp_level 6;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
     # Main server configuration
     server {
@@ -63,158 +41,24 @@ http {
         add_header X-Frame-Options "SAMEORIGIN";
         add_header X-XSS-Protection "1; mode=block";
         add_header X-Content-Type-Options "nosniff";
+        add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; connect-src 'self' https://api.twitch.tv https://id.twitch.tv";
         
         # Root directory for static files
         root /usr/share/nginx/html;
         index index.html;
 
-        # Main landing page
-        location / {
-            # First attempt to serve static files, then fall back to proxy
-            try_files $uri $uri/ @landing;
-        }
-
-        # Proxy to the landing page service
-        location @landing {
-            # Dynamic backend selection based on environment
-            set $backend "landing:3000";
-            if ($environment = "development") {
-                set $backend "localhost:5174";
-            }
-            
-            proxy_pass http://$backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Disable caching for dynamic content
-            proxy_cache off;
-            proxy_buffering off;
-            
-            # Increase timeouts for long-running requests
-            proxy_connect_timeout 60s;
-            proxy_send_timeout 60s;
-            proxy_read_timeout 60s;
-        }
-        
-        # Twitch callback URL
-        location = /twitch-callback.html {
-            # Set appropriate cache-control headers
-            add_header Cache-Control "no-cache, no-store, must-revalidate";
-            add_header Pragma "no-cache";
-            add_header Expires "0";
-        }
-        
-        # Twitch auth client JS
-        location = /twitch-auth-client.js {
-            # Set appropriate cache-control headers for infrequent updates
-            add_header Cache-Control "public, max-age=3600";
-        }
-        
-        # API endpoints
+        # For API requests, proxy to our landing API server
         location /api/ {
-            # Dynamic backend selection based on environment
-            set $api_backend "landing:3000";
-            if ($environment = "development") {
-                set $api_backend "localhost:3000";
-            }
-            
-            proxy_pass http://$api_backend;
+            proxy_pass http://landing:3000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             
             # Configure CORS headers for API
-            add_header 'Access-Control-Allow-Origin' '*' always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
-            
-            # Handle OPTIONS method for CORS preflight requests
-            if ($request_method = 'OPTIONS') {
-                add_header 'Access-Control-Allow-Origin' '*';
-                add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
-                add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
-                add_header 'Access-Control-Max-Age' 1728000;
-                add_header 'Content-Type' 'text/plain; charset=utf-8';
-                add_header 'Content-Length' 0;
-                return 204;
-            }
-            
-            # Disable caching for API endpoints
-            proxy_cache off;
-            proxy_no_cache 1;
-            proxy_cache_bypass 1;
-            
-            # Increase timeouts for API calls
-            proxy_connect_timeout 60s;
-            proxy_send_timeout 60s;
-            proxy_read_timeout 60s;
-        }
-        
-        # Special handling for Twitch API endpoint
-        location /api/twitch/ {
-            # Dynamic backend selection based on environment
-            set $twitch_backend "landing:3000";
-            if ($environment = "development") {
-                set $twitch_backend "localhost:3000";
-            }
-            
-            proxy_pass http://$twitch_backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Configure CORS headers for Twitch API
-            add_header 'Access-Control-Allow-Origin' '*' always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
-            
-            # Handle OPTIONS method for CORS preflight requests
-            if ($request_method = 'OPTIONS') {
-                add_header 'Access-Control-Allow-Origin' '*';
-                add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
-                add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
-                add_header 'Access-Control-Max-Age' 1728000;
-                add_header 'Content-Type' 'text/plain; charset=utf-8';
-                add_header 'Content-Length' 0;
-                return 204;
-            }
-            
-            # Disable caching for API endpoints
-            proxy_cache off;
-            proxy_no_cache 1;
-            proxy_cache_bypass 1;
-            
-            # Increase timeouts for Twitch API calls
-            proxy_connect_timeout 120s;
-            proxy_send_timeout 120s;
-            proxy_read_timeout 120s;
-        }
-        
-        # Special handling for app-token endpoint
-        location = /api/twitch/app-token {
-            # Dynamic backend selection based on environment
-            set $token_backend "landing:3000";
-            if ($environment = "development") {
-                set $token_backend "localhost:3000";
-            }
-            
-            proxy_pass http://$token_backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Configure CORS headers for Twitch API
-            add_header 'Access-Control-Allow-Origin' '*' always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
-            
-            # Specific debugging for this endpoint
-            add_header 'X-Debug-Info' 'app-token-endpoint' always;
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
             
             # Handle OPTIONS method for CORS preflight requests
             if ($request_method = 'OPTIONS') {
@@ -227,18 +71,49 @@ http {
                 return 204;
             }
             
-            # Disable caching completely
+            # Disable caching for API endpoints
             proxy_cache off;
-            proxy_no_cache 1;
-            proxy_cache_bypass 1;
-            add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate" always;
-            add_header Pragma "no-cache" always;
-            add_header Expires "0" always;
             
-            # Extended timeouts for token requests
-            proxy_connect_timeout 180s;
-            proxy_send_timeout 180s;
-            proxy_read_timeout 180s;
+            # Increase timeouts for API calls
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
+        }
+        
+        # For n8n, proxy to the n8n service
+        location /n8n/ {
+            proxy_pass http://n8n:5678/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Websocket support
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            
+            # Security headers for n8n admin area
+            add_header X-Frame-Options "DENY";
+            
+            # Increase timeouts for n8n
+            proxy_connect_timeout 120s;
+            proxy_send_timeout 120s;
+            proxy_read_timeout 120s;
+        }
+
+        # Twitch callback URL
+        location = /twitch-callback.html {
+            # Set appropriate cache-control headers
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
+            add_header Pragma "no-cache";
+            add_header Expires "0";
+        }
+        
+        # Twitch auth client JS
+        location = /twitch-auth-client.js {
+            # Set appropriate cache-control headers for infrequent updates
+            add_header Cache-Control "public, max-age=3600";
         }
 
         # Static content with appropriate cache durations
@@ -258,6 +133,11 @@ http {
             expires 30d;  # Font files can be cached longer
             add_header Cache-Control "public, max-age=2592000";
             try_files $uri =404;
+        }
+        
+        # Main landing page paths
+        location / {
+            try_files $uri $uri/ /index.html;
         }
         
         # Health check
@@ -289,112 +169,6 @@ http {
         location = /50x.html {
             root /usr/share/nginx/html;
             internal;
-        }
-    }
-    
-    # Development-specific server block for direct access
-    server {
-        listen 80;
-        server_name localhost 127.0.0.1;
-        
-        # Basic security headers
-        add_header X-Frame-Options "SAMEORIGIN";
-        add_header X-XSS-Protection "1; mode=block";
-        add_header X-Content-Type-Options "nosniff";
-        
-        # Development-specific headers
-        add_header X-Environment "Development" always;
-        
-        # Disable all caching for development
-        add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate" always;
-        add_header Pragma "no-cache" always;
-        add_header Expires "0" always;
-        
-        # Forward all requests to Vite dev server
-        location / {
-            proxy_pass http://localhost:5174;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Disable caching
-            proxy_buffering off;
-            proxy_cache off;
-        }
-        
-        # API requests forwarded to API server
-        location /api/ {
-            proxy_pass http://localhost:3000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Configure CORS headers
-            add_header 'Access-Control-Allow-Origin' '*' always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
-            
-            # Handle OPTIONS method
-            if ($request_method = 'OPTIONS') {
-                add_header 'Access-Control-Allow-Origin' '*';
-                add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
-                add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
-                add_header 'Access-Control-Max-Age' 1728000;
-                add_header 'Content-Type' 'text/plain; charset=utf-8';
-                add_header 'Content-Length' 0;
-                return 204;
-            }
-            
-            # Disable caching
-            proxy_cache off;
-            proxy_no_cache 1;
-            proxy_cache_bypass 1;
-        }
-        
-        # Special handling for the Twitch token endpoint
-        location = /api/twitch/app-token {
-            proxy_pass http://localhost:3000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Debug header
-            add_header 'X-Debug-Info' 'Development app-token endpoint' always;
-            
-            # CORS headers
-            add_header 'Access-Control-Allow-Origin' '*' always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
-            
-            # OPTIONS handling
-            if ($request_method = 'OPTIONS') {
-                add_header 'Access-Control-Allow-Origin' '*';
-                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-                add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
-                add_header 'Access-Control-Max-Age' 1728000;
-                add_header 'Content-Type' 'text/plain; charset=utf-8';
-                add_header 'Content-Length' 0;
-                return 204;
-            }
-            
-            # Disable all caching
-            proxy_cache off;
-            proxy_no_cache 1;
-            proxy_cache_bypass 1;
-            add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate" always;
-            add_header Pragma "no-cache" always;
-            add_header Expires "0" always;
-            
-            # Extended timeouts
-            proxy_connect_timeout 180s;
-            proxy_send_timeout 180s;
-            proxy_read_timeout 180s;
         }
     }
 }
