--- a/landing/docker-compose.yml
+++ b/landing/docker-compose.yml
@@ -53,7 +53,7 @@ services:
     volumes:
       - dist_data:/app/dist:ro
     healthcheck:
-      test: ["CMD", "wget", "--spider", "http://localhost:3000/api/health"]
+      test: ["CMD", "wget", "--spider", "http://localhost:3000/"]
       interval: 30s
       timeout: 10s
       retries: 3
