--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -47,19 +47,19 @@ http {
         root /usr/share/nginx/html;
         index index.html;
 
-        # For API requests, proxy to our landing API server
+        # Proxy API requests to the backend service
         location /api/ {
-            proxy_pass http://landing:3000;
+            proxy_pass http://landing:3000;  # Update this to your backend service URL
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            
+
             # Configure CORS headers for API
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
-            
+
             # Handle OPTIONS method for CORS preflight requests
             if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Allow-Origin' '*';
@@ -70,10 +70,10 @@ http {
                 add_header 'Content-Length' 0;
                 return 204;
             }
-            
+
             # Disable caching for API endpoints
             proxy_cache off;
-            
+
             # Increase timeouts for API calls
             proxy_connect_timeout 60s;
             proxy_send_timeout 60s;
