--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -42,7 +42,8 @@ http {
         add_header X-XSS-Protection "1; mode=block";
         add_header X-Content-Type-Options "nosniff";
         add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; connect-src 'self' https://api.twitch.tv https://id.twitch.tv";
-        
+        add_header Content-Security-Policy "img-src 'self' data: https://static-cdn.jtvnw.net;";
+
         # Root directory for static files
         root /usr/share/nginx/html;
         index index.html;
