--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -41,26 +41,62 @@ http {
         add_header X-Frame-Options "SAMEORIGIN";
         add_header X-XSS-Protection "1; mode=block";
         add_header X-Content-Type-Options "nosniff";
-        add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; connect-src 'self' https://api.twitch.tv https://id.twitch.tv";
-        add_header Content-Security-Policy "img-src 'self' data: https://static-cdn.jtvnw.net;";
-
+        
         # Root directory for static files
         root /usr/share/nginx/html;
         index index.html;
 
-        # Proxy API requests to the backend service
-        location /api/ {
-            proxy_pass http://landing:3000;  # Update this to your backend service URL
+        # Main landing page
+        location / {
+            # First attempt to serve static files, then fall back to proxy
+            try_files $uri $uri/ @landing;
+        }
+
+        # Proxy to the landing page service
+        location @landing {
+            proxy_pass http://landing:3000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-
+            
+            # Disable caching for dynamic content
+            proxy_cache off;
+            proxy_buffering off;
+            
+            # Increase timeouts for long-running requests
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
+        }
+        
+        # Twitch callback URL
+        location = /twitch-callback.html {
+            # Set appropriate cache-control headers
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
+            add_header Pragma "no-cache";
+            add_header Expires "0";
+        }
+        
+        # Twitch auth client JS
+        location = /twitch-auth-client.js {
+            # Set appropriate cache-control headers for infrequent updates
+            add_header Cache-Control "public, max-age=3600";
+        }
+        
+        # API endpoints
+        location /api/ {
+            proxy_pass http://landing:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
             # Configure CORS headers for API
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
-
+            
             # Handle OPTIONS method for CORS preflight requests
             if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Allow-Origin' '*';
@@ -71,10 +107,10 @@ http {
                 add_header 'Content-Length' 0;
                 return 204;
             }
-
+            
             # Disable caching for API endpoints
             proxy_cache off;
-
+            
             # Increase timeouts for API calls
             proxy_connect_timeout 60s;
             proxy_send_timeout 60s;
@@ -103,20 +139,6 @@ http {
             proxy_read_timeout 120s;
         }
 
-        # Twitch callback URL
-        location = /twitch-callback.html {
-            # Set appropriate cache-control headers
-            add_header Cache-Control "no-cache, no-store, must-revalidate";
-            add_header Pragma "no-cache";
-            add_header Expires "0";
-        }
-        
-        # Twitch auth client JS
-        location = /twitch-auth-client.js {
-            # Set appropriate cache-control headers for infrequent updates
-            add_header Cache-Control "public, max-age=3600";
-        }
-
         # Static content with appropriate cache durations
         location ~* \.(jpg|jpeg|png|gif|ico|svg)$ {
             expires 7d;  # Images can be cached longer
@@ -135,11 +157,7 @@ http {
             add_header Cache-Control "public, max-age=2592000";
             try_files $uri =404;
         }
-        
-        # Main landing page paths
-        location / {
-            try_files $uri $uri/ /index.html;
-        }
+
         
         # Health check
         location /health {
