--- a/landing/docker-compose.yml
+++ b/landing/docker-compose.yml
@@ -24,8 +24,8 @@ services:
       - dist_data:/app/dist
     environment:
       - NODE_ENV=production
-      - TWITCH_CLIENT_ID=${TWITCH_CLIENT_ID}
-      - TWITCH_CLIENT_SECRET=${TWITCH_CLIENT_SECRET}
+      - VITE_TWITCH_CLIENT_ID=${TWITCH_CLIENT_ID}
+      - VITE_TWITCH_CLIENT_SECRET=${TWITCH_CLIENT_SECRET}
 
   prod:
     build:
@@ -36,8 +36,8 @@ services:
       - "3000:3000"
     environment:
       - NODE_ENV=production
-      - TWITCH_CLIENT_ID=${TWITCH_CLIENT_ID}
-      - TWITCH_CLIENT_SECRET=${TWITCH_CLIENT_SECRET}
+      - VITE_TWITCH_CLIENT_ID=${TWITCH_CLIENT_ID}
+      - VITE_TWITCH_CLIENT_SECRET=${TWITCH_CLIENT_SECRET}
     volumes:
       - dist_data:/app/dist:ro
 
