--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,46 +1,97 @@
-user  nginx;
-worker_processes  auto;
+user nginx;
+worker_processes auto;
+worker_rlimit_nofile 65535;
 
-error_log  /var/log/nginx/error.log warn;
-pid        /var/run/nginx.pid;
+error_log /var/log/nginx/error.log warn;
+pid /var/run/nginx.pid;
 
 events {
-    worker_connections  1024;
+    worker_connections 4096;
     multi_accept on;
+    use epoll;
 }
 
 http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log  /var/log/nginx/access.log  main;
+    access_log /var/log/nginx/access.log main;
 
-    sendfile        on;
-    tcp_nopush      on;
-    tcp_nodelay     on;
-    keepalive_timeout  65;
+    # Optimize file sending
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
     
-    # Disable open_file_cache to prevent stale content
-    open_file_cache off;
+    # Timeouts
+    keepalive_timeout 65;
+    keepalive_requests 1000;
+    client_body_timeout 10;
+    client_header_timeout 10;
+    send_timeout 10;
+    
+    # File cache settings
+    open_file_cache max=10000 inactive=5m;
+    open_file_cache_valid 2m;
+    open_file_cache_min_uses 1;
+    open_file_cache_errors on;
     
     # Compression settings
-    gzip  on;
+    gzip on;
     gzip_comp_level 6;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+    gzip_min_length 256;
+    gzip_proxied any;
+    gzip_vary on;
+    gzip_types
+        application/atom+xml
+        application/javascript
+        application/json
+        application/ld+json
+        application/manifest+json
+        application/rss+xml
+        application/vnd.geo+json
+        application/vnd.ms-fontobject
+        application/x-font-ttf
+        application/x-web-app-manifest+json
+        application/xhtml+xml
+        application/xml
+        font/opentype
+        image/bmp
+        image/svg+xml
+        image/x-icon
+        text/cache-manifest
+        text/css
+        text/plain
+        text/vcard
+        text/vnd.rim.location.xloc
+        text/vtt
+        text/x-component
+        text/x-cross-domain-policy;
 
     # Main server configuration
     server {
         listen 80 default_server;
+        listen [::]:80 default_server;
+        
+        # Redirect to HTTPS in production
+        # Uncomment in production:
+        # return 301 https://$host$request_uri;
+        
         server_name _;
         
         # Basic security headers
-        add_header X-Frame-Options "SAMEORIGIN";
-        add_header X-XSS-Protection "1; mode=block";
-        add_header X-Content-Type-Options "nosniff";
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+        add_header Permissions-Policy "camera=(), microphone=(), geolocation=(), interest-cohort=()";
+        
+        # Enable HTTP Strict Transport Security in production
+        # Uncomment in production:
+        # add_header Strict-Transport-Security "max-age=63072000; includeSubdomains; preload" always;
         
         # Root directory for static files
         root /usr/share/nginx/html;
@@ -48,76 +99,59 @@ http {
 
         # Main landing page
         location / {
-            # First attempt to serve static files, then fall back to proxy
-            try_files $uri $uri/ @landing;
+            try_files $uri $uri/ /index.html;
         }
 
-        # Proxy to the landing page service
-        location @landing {
-            proxy_pass http://landing:3000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Disable caching for dynamic content
-            proxy_cache off;
-            proxy_buffering off;
-            
-            # Increase timeouts for long-running requests
-            proxy_connect_timeout 60s;
-            proxy_send_timeout 60s;
-            proxy_read_timeout 60s;
-        }
-        
-        # Twitch callback URL
-        location = /twitch-callback.html {
-            # Set appropriate cache-control headers
-            add_header Cache-Control "no-cache, no-store, must-revalidate";
-            add_header Pragma "no-cache";
-            add_header Expires "0";
-        }
-        
-        # Twitch auth client JS
-        location = /twitch-auth-client.js {
-            # Set appropriate cache-control headers for infrequent updates
-            add_header Cache-Control "public, max-age=3600";
-        }
-        
         # API endpoints
         location /api/ {
-            proxy_pass http://landing:3000;
+            proxy_pass http://prod:3000;
+            proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             
             # Configure CORS headers for API
-            add_header 'Access-Control-Allow-Origin' '*';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+            add_header 'Access-Control-Allow-Origin' '*' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
             
             # Handle OPTIONS method for CORS preflight requests
             if ($request_method = 'OPTIONS') {
-                add_header 'Access-Control-Allow-Origin' '*';
-                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-                add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
-                add_header 'Access-Control-Max-Age' 1728000;
-                add_header 'Content-Type' 'text/plain; charset=utf-8';
-                add_header 'Content-Length' 0;
+                add_header 'Access-Control-Allow-Origin' '*' always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+                add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
+                add_header 'Access-Control-Max-Age' 1728000 always;
+                add_header 'Content-Type' 'text/plain; charset=utf-8' always;
+                add_header 'Content-Length' 0 always;
                 return 204;
             }
             
-            # Disable caching for API endpoints
-            proxy_cache off;
-            
-            # Increase timeouts for API calls
+            # Increased timeouts for API calls
             proxy_connect_timeout 60s;
             proxy_send_timeout 60s;
             proxy_read_timeout 60s;
+            proxy_buffering off;
         }
         
-        # For n8n, proxy to the n8n service
+        # Twitch callback URL - no caching
+        location = /twitch-callback.html {
+            add_header Cache-Control "no-cache, no-store, must-revalidate" always;
+            add_header Pragma "no-cache" always;
+            add_header Expires "0" always;
+        }
+        
+        # Special handling for environment config
+        location = /env.js {
+            add_header Cache-Control "no-cache, no-store, must-revalidate" always;
+            add_header Pragma "no-cache" always;
+            add_header Expires "0" always;
+            proxy_pass http://prod:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
+        
+        # For n8n, proxy to the n8n service with websocket support
         location /n8n/ {
             proxy_pass http://n8n:5678/;
             proxy_set_header Host $host;
@@ -131,58 +165,59 @@ http {
             proxy_set_header Connection "upgrade";
             
             # Security headers for n8n admin area
-            add_header X-Frame-Options "DENY";
+            add_header X-Frame-Options "DENY" always;
             
-            # Increase timeouts for n8n
+            # Increased timeouts for n8n
             proxy_connect_timeout 120s;
             proxy_send_timeout 120s;
             proxy_read_timeout 120s;
         }
 
-        # Static content with appropriate cache durations
-        location ~* \.(jpg|jpeg|png|gif|ico|svg)$ {
-            expires 7d;  # Images can be cached longer
-            add_header Cache-Control "public, max-age=604800";
+        # Static assets with optimal caching
+        location ~* \.(?:jpg|jpeg|gif|png|ico|svg)$ {
+            expires 7d;
+            add_header Cache-Control "public, max-age=604800, immutable";
             try_files $uri =404;
         }
         
-        location ~* \.(css|js)$ {
-            expires 1h;  # Shorter expiration for code files
-            add_header Cache-Control "public, max-age=3600";
+        # JavaScript and CSS files with content hash in filename (immutable)
+        location ~* \.(?:css|js)$ {
+            expires 1y;
+            add_header Cache-Control "public, max-age=31536000, immutable";
             try_files $uri =404;
         }
         
-        location ~* \.(woff|woff2|ttf|eot)$ {
-            expires 30d;  # Font files can be cached longer
-            add_header Cache-Control "public, max-age=2592000";
+        # Font files
+        location ~* \.(?:woff|woff2|ttf|eot)$ {
+            expires 1y;
+            add_header Cache-Control "public, max-age=31536000, immutable";
             try_files $uri =404;
         }
-
         
         # Health check
         location /health {
             access_log off;
-            return 200 "healthy\n";
+            proxy_pass http://prod:3000/health;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
         }
         
         # robots.txt
         location = /robots.txt {
             add_header Content-Type text/plain;
-            return 200 "User-agent: *\nAllow: /\n";
+            add_header Cache-Control "max-age=86400";
+            return 200 "User-agent: *\nAllow: /\nDisallow: /n8n/\n";
         }
         
         # Favicon handling
         location = /favicon.ico {
             access_log off;
             log_not_found off;
+            expires 7d;
         }
         
         # Error handling
-        error_page 404 /404.html;
-        location = /404.html {
-            root /usr/share/nginx/html;
-            internal;
-        }
+        error_page 404 /index.html;
         
         error_page 500 502 503 504 /50x.html;
         location = /50x.html {
@@ -190,4 +225,31 @@ http {
             internal;
         }
     }
+
+    # HTTPS server
+    # Uncomment in production after adding SSL certificates
+    # server {
+    #     listen 443 ssl http2;
+    #     listen [::]:443 ssl http2;
+    #     server_name akane.production;
+    # 
+    #     # SSL configuration
+    #     ssl_certificate /etc/nginx/ssl/akane.production.crt;
+    #     ssl_certificate_key /etc/nginx/ssl/akane.production.key;
+    #     ssl_session_timeout 1d;
+    #     ssl_session_cache shared:SSL:50m;
+    #     ssl_session_tickets off;
+    # 
+    #     # Modern SSL configuration
+    #     ssl_protocols TLSv1.3 TLSv1.2;
+    #     ssl_prefer_server_ciphers off;
+    # 
+    #     # OCSP Stapling
+    #     ssl_stapling on;
+    #     ssl_stapling_verify on;
+    # 
+    #     # Rest of configuration similar to HTTP server
+    #     root /usr/share/nginx/html;
+    #     # ... include the same location blocks as the HTTP server
+    # }
 }
