--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,57 @@
+# Main docker-compose file that orchestrates all services
 version: '3.8'
-
 services:
-  # Development mode service
-  dev:
-    build:
-      context: .
-      dockerfile: Dockerfile
-      target: build
-    volumes:
-      - .:/app
-      - /app/node_modules  # Exclude node_modules from mounting
-      - /app/dist  # Exclude dist from mounting
+  # n8n automation service
+  n8n:
+    image: n8nio/n8n:latest
+    restart: unless-stopped
     ports:
-      - "5174:5173"  # Vite dev server
-      - "3000:3000"  # Express API server
+      - "5678:5678"
     environment:
-      - NODE_ENV=development
+      - N8N_HOST=n8n
+      - N8N_PORT=5678
+      - N8N_PROTOCOL=http
+      - NODE_ENV=production
+      - WEBHOOK_URL=http://localhost:5678/
       - TWITCH_CLIENT_ID=${TWITCH_CLIENT_ID}
       - TWITCH_CLIENT_SECRET=${TWITCH_CLIENT_SECRET}
-    command: sh -c "npm run dev -- --host 0.0.0.0 & node server/index.js & wait"
+    volumes:
+      - n8n_data:/home/node/.n8n
+    networks:
+      - app-network
     healthcheck:
-      test: ["CMD", "wget", "-qO-", "http://localhost:3000/health"]
+      test: ["CMD", "wget", "--spider", "http://localhost:5678/healthz"]
       interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 20s
+
+  # Nginx service for routing traffic
+  nginx:
+    image: nginx:alpine
+    restart: unless-stopped
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - dist_data:/usr/share/nginx/html:ro
+    depends_on:
+      - prod
+      - n8n
+    networks:
+      - app-network
+    environment:
+      - NGINX_HOST=akane.production
+    healthcheck:
+      test: ["CMD", "nginx", "-t"]
+      interval: 1m
       timeout: 5s
       retries: 3
-      start_period: 5s
 
-  # Build-only service for CI/CD pipelines
+  # Build service for creating dist files
   build:
     build:
-      context: .
+      context: ./landing
       dockerfile: Dockerfile
       target: build
       args:
@@ -40,22 +62,22 @@ services:
     environment:
       - NODE_ENV=production
       - VITE_TWITCH_CLIENT_ID=${TWITCH_CLIENT_ID}
-      - VITE_TWITCH_CLIENT_SECRET=${TWITCH_CLIENT_SECRET}
     command: >
       sh -c "
         mkdir -p /app/dist &&
         npm run build &&
-        echo 'Build completed. Copying to volume...'
+        echo 'Build completed. Copying to volume...' &&
+        cp -r /app/dist/* /app/dist/ &&
+        chmod -R 755 /app/dist
       "
+    networks:
+      - app-network
 
-  # Production service
+  # Production service for backend API and serving static files
   prod:
     build:
-      context: .
+      context: ./landing
       dockerfile: Dockerfile
-      args:
-        - TWITCH_CLIENT_ID=${TWITCH_CLIENT_ID}
-        - TWITCH_CLIENT_SECRET=${TWITCH_CLIENT_SECRET}
     restart: unless-stopped
     ports:
       - "3000:3000"
@@ -66,6 +88,8 @@ services:
       - PORT=3000
     volumes:
       - dist_data:/app/dist:ro
+    networks:
+      - app-network
     healthcheck:
       test: ["CMD", "wget", "-qO-", "http://localhost:3000/health"]
       interval: 30s
@@ -73,27 +97,12 @@ services:
       retries: 3
       start_period: 5s
 
-  # Nginx service for production
-  nginx:
-    image: nginx:alpine
-    restart: unless-stopped
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/ssl:/etc/nginx/ssl:ro
-      - dist_data:/usr/share/nginx/html:ro
-    depends_on:
-      - prod
-    environment:
-      - NGINX_HOST=akane.production
-    healthcheck:
-      test: ["CMD", "nginx", "-t"]
-      interval: 1m
-      timeout: 5s
-      retries: 3
+networks:
+  app-network:
+    driver: bridge
 
 volumes:
+  n8n_data:
+    driver: local
   dist_data:
     name: akane_landing_dist_data
